--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + LeadMark main styles -->
     <link rel="stylesheet" href="assets/css/leadmark.css">
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/assets/imgs/web-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard">
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
